2008-10-02  Christian Persch

        Bug 554701 – filechooser spams console with useless warnings

        * gtk/gtkfilesystem.c.c: Don't warn if the async call was simply
        cancelled.

2008-10-02  Christian Persch

        Bug 554698 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554696 – invalid free function used

        * gtk/gtkfilesystemmodel.c: Use the right free func.

2008-10-02  Christian Persch

        Bug 554691 – mem leak in filechooser

        * gtk/gtkfilesystemmodel.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554690 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-02  Michael Natterer  <mitch@imendio.com>

	Bug 553585 – Add orientation API to GtkRuler

	* gtk/gtkruler.[ch]: implement the GtkOrientable interface and
	swallow all code from GtkHRuler and GtkVRuler. Add gtk_ruler_new()
	which takes a GtkOrientation argument.

	* gtk/gtkhruler.c
	* gtk/gtkvruler.c: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: add gtk_ruler_new().

2008-10-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* docs/reference/gtk/gtk-sections.txt:
	* gtk/gtk.symbols:
	* gtk/gtkselection.c:
	* gtk/gtkselection.h: Add gtk_selection_data_get_selection to
	retrieve the sealed struct field GtkSelectionData.selection.

2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkscalebutton.c: Don't #define _GNU_SOURCE on Windows as it
	confuses newest mingw headers.

2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (gdk_keymap_get_caps_lock_state):
	Implement trivially on Windows. Not sure if something more complex
	is actually needed, more specifically whether the function needs
	to differentiate between "Caps Lock" and "Shift Lock" semantics?

2008-10-01  Simos Xenitellis  <simos@gnome.org>
